# ytsum

./: .dockerignore  .env.example  .gitignore  =3.0.0  AI_ATTRIBUTION.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.with-scheduler.yml  docker-compose.yml  docker.env.example  install.sh  pyproject.toml  requirements.txt  ytsum-web.service  ytsum.service  ytsum.timer
.claude/: settings.local.json
src/ytsum/: __init__.py  cli.py  config.py  database.py  scheduler.py  summarizer.py  telegram.py  telegram_bot_service.py  tui.py  web.py  youtube.py
src/ytsum/static/: style.css
src/ytsum/templates/: 404.html  500.html  base.html  channels.html  dashboard.html  history.html  key_points.html  login.html  register.html  settings.html  summary.html  videos.html
